Started work on Welcome screen

--- a/src/components/NewDesign/css/index.css
+++ b/src/components/NewDesign/css/index.css
@@ -4,5 +4,5 @@ body {
 
 @font-face {
     font-family: Apercu;
-    src: url('./assets/fonts/Apercu-Medium.otf') format("opentype");
+    src: url('../assets/fonts/Apercu Medium.otf') format("opentype");
 }
