Fix font for <input>

--- a/src/components/NewDesign/css/Welcome.css
+++ b/src/components/NewDesign/css/Welcome.css
@@ -4,6 +4,7 @@ label {
   margin-bottom: 20px;
 }
 input {
+  font-family: inherit;
   font-size: 1.3em;
   border: none;
   border-bottom: 2px solid #6E00B9;
