Advancement in the connection

--- a/src/components/NewDesign/css/Welcome.css
+++ b/src/components/NewDesign/css/Welcome.css
@@ -12,6 +12,7 @@ input {
   color: #6E00B9;
   text-shadow: 0px 0px 0px #000;
   -webkit-text-fill-color: transparent;
+  background-color: transparent;
 }
 input:focus {
   outline: none;
