--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,11 @@
 body{
     padding: 0;
     margin: 0;
+    -webkit-user-select: none;
+}
+
+button {
+    -webkit-app-region: no-drag;
 }
 
 .Main{
