Add file size on drop

--- a/src/components/NewDesign/css/Dropzone.css
+++ b/src/components/NewDesign/css/Dropzone.css
@@ -13,6 +13,9 @@
     top: 50%;
     transform: translateY(-50%);
 }
+.fileSize {
+    color: black;
+}
 .prompt-active {
     -webkit-animation: color-change 1s infinite;
     -moz-animation: color-change 1s infinite;
