--- a/src/components/css/User.css
+++ b/src/components/css/User.css
@@ -1,16 +1,7 @@
-.User, .User-active {
+.User {
+    font-size: 1.8em;
     border: 2px solid black;
     margin-bottom: 10px;
     padding: 10px;
     cursor: pointer;
-}
-.User-active {
-    background-color: black;
-    color: white;
-}
-.name {
-    font-size: 1.8em;
-}
-.User ul, .User-active ul {
-    width: 95%;
 }
