--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,6 +1,8 @@
-.header {
-    padding-top: 12px;
-    position:fixed;
+.Header {
+  position: fixed;
+    cursor: pointer;
+    background-color: #6E00B9;
+    padding-top: 25px;
     top:0;
     height: 30px;
     width:100%;
@@ -8,14 +10,12 @@
     -webkit-app-region: drag;
 }
 
-.headerContent{
-    padding: 10px 10px;
-}
-
-.appName {
+.Header .appName {
     float:left;
+    padding-left: 10px;
 }
 
-.user {
+.Header .userName {
     text-align: right;
+    padding-right: 10px;
 }
