--- a/src/components/css/RequestList.css
+++ b/src/components/css/RequestList.css
@@ -1,3 +1,10 @@
 ul {
-    -webkit-padding-start: 0;
+  -webkit-padding-start: 0;
+}
+.RequestList ul {
+  margin-left: 1px;
+}
+.RequestList .requestHeader {
+  font-size: 1em;
+  padding-left: 1px;
 }
