--- a/src/components/css/User.css
+++ b/src/components/css/User.css
@@ -1,7 +1,9 @@
 .User {
-    font-size: 1.8em;
     border: 2px solid black;
     margin-bottom: 10px;
     padding: 10px;
     cursor: pointer;
+}
+.User .userName {
+  font-size: 1.7em;
 }
