--- a/src/components/css/Send.css
+++ b/src/components/css/Send.css
@@ -1,6 +1,7 @@
 .Send {
     height: 50px;
     background-color: black;
+    border-radius: 5px;
     color: white;
     text-align: center;
     cursor: pointer;
