Outgoing transfer now correctly formatted in an object and ready to send. Style was also added to reflect currently selected users and file

--- a/src/components/css/User.css
+++ b/src/components/css/User.css
@@ -4,6 +4,15 @@
     padding: 10px;
     cursor: pointer;
 }
+
+.userNotSelected {
+  padding: 12px;
+}
+
+.userSelected {
+  border:4px solid #6E00B9;
+}
+
 .User .userName {
   font-size: 1.7em;
 }
