--- a/src/components/css/Send.css
+++ b/src/components/css/Send.css
@@ -1,13 +1,24 @@
 .Send {
     height: 50px;
-    background-color: black;
     border-radius: 5px;
-    color: white;
     text-align: center;
     cursor: pointer;
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.canSend {
+    color: white;
+    background-color: black;
+}
+
+.cannotSend {
+    background-color: white;
+    color: black;
+    border-style: solid;
+    cursor: not-allowed;
+}
+
 .prompt {
     margin-left: auto;
     margin-right: auto;
