--- a/src/components/css/Send.css
+++ b/src/components/css/Send.css
@@ -32,6 +32,7 @@
     position: absolute;
     bottom: 0;
     height: 162px;
+    line-height: 162px;
     left: 10px;
     right: 10px;
     bottom: 57px;
@@ -43,8 +44,15 @@
     border: 3px solid black;
     opacity: 1;
 }
+@media (min-width: 575px) {
+    .Modal {
+        text-align: center;
+    }
+}
 .Modal p {
-    margin-top: 70px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
 }
 .Modal:after,
 .Modal:before {
